--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
-			<p>Hi, I’m Draco the Dragon</p>
+			<p>Hi, I’m Gonzalo the Dragon</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
 					<img src="img/ava.jpg" alt="Avatar">
@@ -52,7 +52,7 @@
 					<h1>I live in<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					Draco is a constellation in the far northern sky. Its name is Latin for dragon. Draco is circumpolar (that is, never setting) for many observers in the northern hemisphere. It was one of the 48 constellations listed by the 2nd century astronomer Ptolemy.
+					Gonzalo is a constellation in the far northern sky. Its name is Latin for dragon. Draco is circumpolar (that is, never setting) for many observers in the northern hemisphere. It was one of the 48 constellations listed by the 2nd century astronomer Ptolemy.
 				</p>
 			</div>
 		</div>
