--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 	<!-- Introduction -->
 	<div class="intro section" id="about">
 		<div class="container">
-			<p>Hi, I’m Gonzalo the Dragon</p>
+			<p>Hola, Soy Gonzalo Sarango</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
 					<img src="img/ava.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
-					<h1>I live in<br><span id="typed"></span></h1>
+					<h1>Bienvenidos a mi pàgina<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					Gonzalo is a constellation in the far northern sky. Its name is Latin for dragon. Draco is circumpolar (that is, never setting) for many observers in the northern hemisphere. It was one of the 48 constellations listed by the 2nd century astronomer Ptolemy.
+					 Me considero una persona responsable y de ràpido aprendizaje, logro cada meta que me propongo. 
 				</p>
 			</div>
 		</div>
@@ -61,21 +61,21 @@
 	<!-- Work Experience -->
 	<div class="work section second" id="experiences">
 		<div class="container">
-			<h1>Work<br>Experiences</h1>
+			<h1>Experiencias<br>Laborales</h1>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">PT Traveloka Indonesia</a></li>
-				<li>Web Designer</li>
+				<li>Mayo 2014-Mayo 2015</li>
+				<li><a href="#">COES SINAC</a></li>
+				<li>Practicas pre-profesionales</li>
 			</ul>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Wego</a></li>
-				<li>UI/UX Designer</li>
+				<li>Mayo 2015-Noviembre 2015</li>
+				<li><a href="#">COES SINAC</a></li>
+				<li>Practicas profesionales</li>
 			</ul>
 			<ul class="work-list">
-				<li>2014-2015</li>
-				<li><a href="#">Garuda Indonesia</a></li>
-				<li>System Designer</li>
+				<li>Noviembre 2015-Actualidad</li>
+				<li><a href="#">Kallpa Generaciòn</a></li>
+				<li>Analista Comercial</li>
 			</ul>
 		</div>
 	</div>
@@ -83,22 +83,21 @@
 	<!-- Award & Achievements -->
 	<div class="award section second" id="achievements">
 		<div class="container">
-			<h1>Award &amp;<br>Achievements</h1>
+			<h1>Cursos &amp;<br>Estudios</h1>
 			<ul class="award-list list-flat">
-				<li>January 2014</li>
-				<li>Attained PHP5 certification</li>
-				<li>Hold world/Olympic record</li>
+				<li>2010-2014</li>
+				<li>Ingenierìa Elèctrica</li>
+				<li>Universidad Nacional de Ingenierìa</li>
 			</ul>
 			<ul class="award-list list-flat">
-				<li>December 2014</li>
-				<li>Audited X number of clients in only Y amount of time</li>
-				<li>Held a perfect attendance record</li>
-				<li>Were promoted after only X months in the role</li>
-			</ul>
+				<li>2016-2018</li>
+				<li>Maestrìa en Sistemas Elèctricos de Potencia</li>
+				<li>Universidad Nacional de Ingenierìa</li>
+					</ul>
 			<ul class="award-list list-flat">
-				<li>March 2014</li>
-				<li>Placed employees at X companies</li>
-				<li>United multiple teams post-merger</li>
+				<li>2020-2022</li>
+				<li>Maestrìa en Economìa</li>
+				<li>Pontificia Universidad Catòlica del Perù</li>
 			</ul>
 		</div>
 	</div>
@@ -112,12 +111,12 @@
 				<li>HTML / CSS / SASS / PHP / Javascript</li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Database</li>
-				<li>MySQL / MongoDB / Oracle / Access</li>
+				<li>Base de datos</li>
+				<li>Phyton/Matlab</li>
 			</ul>
 			<ul class="skill-list list-flat">
-				<li>Framework</li>
-				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
+				<li>Inglès</li>
+				<li>Avanzado</li>
 			</ul>
 		</div>
 	</div>
