--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <script>
 		function newTyped(){}$(function(){$("#typed").typed({
 		// Change to edit type effect
-		strings: ["far northern sky", "your galaxy", "everywhere"],
+		strings: ["Ingeniero Electricista", "Cel. 982 064 267", "DNI 72694759"],
 
 		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
     </script>
