--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<h1>Bienvenidos a mi pàgina<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					 Me considero una persona responsable y de ràpido aprendizaje, logro cada meta que me propongo. 
+					 Me considero una persona responsable y de ràpido aprendizaje. Tengo 10 años de experiencia en el sector de la ingenierìa elèctrica en la cual he asumido varios retos y he desarrolado varios proyectos.
 				</p>
 			</div>
 		</div>
