--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<style>
 		.intro h1:before {
 			/* Edit this with your name or anything else */
-			content: 'DRACO';
+			content: 'Gonzalo';
 		}
 	</style>
 </head>
@@ -46,7 +46,7 @@
 			<p>Hola, Soy Gonzalo Sarango</p>
 			<div class="units-row units-split wrap">
 				<div class="unit-20">
-					<img src="img/ava.jpg" alt="Avatar">
+					<img src="img/ava2.jpg" alt="Avatar">
 				</div>
 				<div class="unit-80">
 					<h1>Bienvenidos a mi pàgina<br><span id="typed"></span></h1>
@@ -124,7 +124,7 @@
 	<!-- Quote -->
 	<div class="quote">
 		<div class="container text-centered">
-			<h1>fight against the ugliness.</h1>
+			<h1>La energìa hace que el mundo no se detenga.</h1>
 		</div>
 	</div>
 
