--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Draco by @afnizarnur</title>
+    <title>Gonzalo Sarango</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Draco is free PSD &amp; HTML template by @afnizarnur">
+    <meta name="description" content="Gonzalo Sarango &amp; HTML template by @afnizarnur">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/kube.min.css" />
@@ -52,7 +52,7 @@
 					<h1>Bienvenidos a mi pàgina<br><span id="typed"></span></h1>
 				</div>
 				<p>
-					 Me considero una persona responsable y de ràpido aprendizaje. Tengo 10 años de experiencia en el sector de la ingenierìa elèctrica en la cual he asumido varios retos y he desarrolado varios proyectos.
+					 Me considero una persona responsable, de ràpido aprendizaje, y con mis habilidades blandas fortalecidas. Tengo 10 años de experiencia en el sector de la ingenierìa elèctrica en la cual he asumido varios retos y he desarrolado varios proyectos. Actualmente laboro en la empresa Kallpa Generacion como Analista Comercial, en el cual me desempeño viendo temas de facturaciòn, reportes a los entes regulatorios del sector como el MINEM, COES y OSINERGMIN.
 				</p>
 			</div>
 		</div>
@@ -132,14 +132,11 @@
 		<div class="container">
 			<div class="units-row">
 			    <div class="unit-50">
-			    	<p>Handcrafted by Afnizar Nur Ghifari</p>
+			    	<p>Desarrollado por Gonzalo Sarango</p>
 			    </div>
 			    <div class="unit-50">
 					<ul class="social list-flat right">
-						<li><a href="mailto:afnizarhilmi@gmail.com"><i class="fa fa-send"></i></a></li>
-						<li><a href="http://twitter.com/afnizarnur"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="http://dribbble.com/afnizarnur"><i class="fa fa-dribbble"></i></a></li>
-						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-behance"></i></a></li>
+						<li><a href="mailto:gonzalosarango1@gmail.com"><i class="fa fa-send"></i></a></li>				
 					</ul>
 			    </div>
 			</div>
