--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 	<!-- Technical Skills -->
 	<div class="skills section second" id="skills">
 		<div class="container">
-			<h1>Technical<br>Skills</h1>
+			<h1>Habilidades<br>Tècnicas</h1>
 			<ul class="skill-list list-flat">
-				<li>Web Technology</li>
-				<li>HTML / CSS / SASS / PHP / Javascript</li>
+				<li>Microsoft</li>
+				<li>Excel Avanzado/Word/PPT</li>
 			</ul>
 			<ul class="skill-list list-flat">
 				<li>Base de datos</li>
